# AI-Expense-Intelligence-Automation-Platform

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  SKILL.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml  release.yml
docs/: ISSUES.md
docs/adr/: 001-microservices.md  002-langgraph.md  003-pgvector.md  004-rule-engine.md
docs/deployment/: DEPLOYMENT.md
infrastructure/docker/: Dockerfile.ai-engine  Dockerfile.api-gateway  Dockerfile.batch-processor  Dockerfile.dashboard-ui  Dockerfile.expense-processor  Dockerfile.notification-service  Dockerfile.policy-engine  docker-compose.infra.yml  docker-compose.prod.yml  init.sql  nginx.conf
infrastructure/k8s/base/: deployments.yaml  kustomization.yaml  secrets.example.yaml
infrastructure/k8s/overlays/dev/: kustomization.yaml
infrastructure/k8s/overlays/prod/: kustomization.yaml
infrastructure/k8s/overlays/staging/: kustomization.yaml
infrastructure/terraform/environments/prod/: main.tf
scripts/: claude_run_all_issues.sh  create_github_issues.sh  run_all_issues.sh  seed_data.py
services/ai-engine/: pyproject.toml
services/ai-engine/src/: main.py
services/ai-engine/tests/: test_ai_engine.py
services/api-gateway/: pyproject.toml
services/api-gateway/src/: main.py
services/api-gateway/tests/: test_gateway.py  test_security.py
services/batch-processor/: pyproject.toml
services/batch-processor/src/: main.py
services/batch-processor/src/workers/: csv_processor.py
services/batch-processor/tests/: test_batch.py
services/dashboard-ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
services/dashboard-ui/src/: App.tsx  styles.css
services/dashboard-ui/src/components/: charts.tsx
services/dashboard-ui/src/lib/: api.ts  format.test.ts  format.ts
services/dashboard-ui/src/views/: Chat.tsx  Expenses.tsx  Login.tsx  Overview.tsx  Policies.tsx  Upload.tsx
services/expense-processor/: pyproject.toml
services/expense-processor/src/: main.py
services/expense-processor/tests/: test_internal_auth.py  test_processor.py
services/notification-service/: pyproject.toml
services/notification-service/src/: main.py
services/notification-service/src/channels/: email.py  slack.py
services/notification-service/tests/: test_internal_auth.py  test_notify.py
services/policy-engine/: pyproject.toml
services/policy-engine/src/: main.py
services/policy-engine/tests/: test_policy_engine.py
tests/integration/: conftest.py  test_full_pipeline.py
tests/load/: locustfile.py
