[project]
name = "expense-intelligence-platform"
version = "1.0.0"
description = "AI-powered expense categorization, analysis, and automation platform"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["services", "packages"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["shared_types", "db_client", "queue_client"]

[tool.pytest.ini_options]
testpaths = ["services", "packages", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require running infrastructure (deselect with '-m \"not integration\"')",
    "slow: marks tests that take >5s",
]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["services", "packages"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
