[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expense-ai-engine"
version = "1.0.0"
description = "LangGraph analysis pipeline, RAG, and chat agent for the Expense Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "openai>=1.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
