[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expense-api-gateway"
version = "0.1.0"
description = "API Gateway with JWT auth, Redis rate limiting, and request routing for the Expense Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "PyJWT>=2.7",
    "redis[hiredis]>=5.0",
    "pydantic[email]>=2.0",
    "python-multipart>=0.0.7",
    "bcrypt>=4.0",
    "celery[redis]>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
