[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expense-batch-processor"
version = "1.0.0"
description = "CSV batch import validation and submission for the Expense Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "celery[redis]>=5.4",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
