[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expense-processor"
version = "0.1.0"
description = "Document ingestion, OCR extraction, field normalization, and expense processing pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.0",
    "Pillow>=10.0",
    "pytesseract>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
