[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expense-notification-service"
version = "1.0.0"
description = "Email/Slack notification delivery for the Expense Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
